--- a/css/styles.css
+++ b/css/styles.css
@@ -3,4 +3,9 @@ body {
     background-color: rgb(127, 150, 255);
     background-image: url("images/814hgyKloyL._SL1396_.jpg");
     text-align: center;
+
+}
+h1 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: darkred;
 }
